edited HTML and CSS files

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,30 +4,28 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Services Offered - Horiseon</title>
 </head>
 
 <body>
-    <header>
-        <div class="header">
-            <h1>Hori<span class="seo">seo</span>n</h1>
-            <div>
-                <ul>
-                    <li>
-                        <a href="#search-engine-optimization">Search Engine Optimization</a>
-                    </li>
-                    <li>
-                        <a href="#online-reputation-management">Online Reputation Management</a>
-                    </li>
-                    <li>
-                        <a href="#social-media-marketing">Social Media Marketing</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <header class="header">
+        <h1>Hori<span class="seo">seo</span>n</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <div class="hero"></div>
+    <main>
+        <img id="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="digital-marketing-meeting"></img> 
         <div class="content">
             <div id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -51,7 +49,7 @@
                 </p>
             </div>
         </div>
-    </nav>
+    </main>
     <aside>
         <div class="benefits">
             <div class="benefit-lead">
